[package]
name = "the_haunted_mansion"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["wayland"] }
leafwing-input-manager = "0.10"
bevy_ecs_ldtk = "0.8"
bevy-inspector-egui = "0.20"
lazy_static = "1.4"
derivative = "2.2"
bevy_asset_loader = { version = "0.17", features = ["2d"] }
bevy_rapier2d = "0.22"
bevy-ui-dsl = "0.6"
bevy_embedded_assets = "0.8"
rand = "0.8"
futures-lite = "2.0"
pathfinding = "4.3"
bevy_matchbox = { version = "0.7" }
serde = { version = "1.0.190", features = ["derive"] }
bincode = { version = "1.3.3" }

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
strip = "symbols"
